notch pixel gap fix

--- a/style.css
+++ b/style.css
@@ -88,8 +88,9 @@ html{
     border-radius: 0 0 1rem 1rem;
     position: absolute;
     background: hsl(0, 0%, 100%);
-    height: 3%;
+    height: 4%;
     z-index: 3;
+    top: -1px;
 }
 .iphone__header{
     height: 13%;
